fix navigation on top on small screens

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -79,7 +79,7 @@
   }
 
   @include media-query($on-palm) {
-    position: absolute;
+    position: fixed;
     top: 9px;
     right: $spacing-unit / 2;
     background-color: $background-color;
